[gd_scene load_steps=9 format=3 uid="uid://nixoh6ddjot8"]

[ext_resource type="Script" path="res://Time.gd" id="1_0i817"]
[ext_resource type="Script" path="res://MainSegment.gd" id="1_c34el"]
[ext_resource type="Texture2D" uid="uid://b1moruhqmhbmf" path="res://Sprites/body.png" id="1_lqtgh"]
[ext_resource type="Texture2D" uid="uid://cmmyn4mjamrdo" path="res://Sprites/dot.png" id="4_huwmf"]
[ext_resource type="Texture2D" uid="uid://cckw2owpn1oj1" path="res://Sprites/frame.png" id="5_jbanh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h36c8"]
size = Vector2(90, 90)

[sub_resource type="TileSet" id="TileSet_w6t0d"]
tile_size = Vector2i(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rmpl8"]
size = Vector2(38, 38)

[node name="Main" type="Node2D"]
script = ExtResource("1_0i817")
length = 5
speed = 0.3

[node name="MainSegment" type="Area2D" parent="."]
position = Vector2(2, 2)
scale = Vector2(0.442821, 0.442821)
script = ExtResource("1_c34el")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainSegment"]
position = Vector2(40, 40)
shape = SubResource("RectangleShape2D_h36c8")

[node name="Body" type="Sprite2D" parent="MainSegment"]
position = Vector2(40.0222, 40.1986)
scale = Vector2(2.24889, 2.2588)
texture = ExtResource("1_lqtgh")

[node name="RayCast2D" type="RayCast2D" parent="MainSegment"]
position = Vector2(40, 83)

[node name="RayCast2D3" type="RayCast2D" parent="MainSegment"]
position = Vector2(40, -5)
rotation = 3.14159

[node name="RayCast2D4" type="RayCast2D" parent="MainSegment"]
position = Vector2(-3, 40)
rotation = 1.57079

[node name="RayCast2D2" type="RayCast2D" parent="MainSegment"]
position = Vector2(85, 39)
target_position = Vector2(50, 0)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_w6t0d")
format = 2

[node name="GlobalTimer" type="Timer" parent="."]
autostart = true

[node name="Food" type="Area2D" parent="." groups=["collisionobjects"]]
position = Vector2(146, 88)
metadata/_edit_group_ = true

[node name="Dot" type="Sprite2D" parent="Food"]
texture = ExtResource("4_huwmf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Food"]
shape = SubResource("RectangleShape2D_rmpl8")

[node name="Frame" type="Area2D" parent="."]
visible = false

[node name="Frame2" type="Sprite2D" parent="Frame"]
position = Vector2(240, 360)
scale = Vector2(1.125, 1.07778)
texture = ExtResource("5_jbanh")

[connection signal="timeout" from="GlobalTimer" to="." method="_on_global_timer_timeout"]
[connection signal="timeout" from="GlobalTimer" to="MainSegment" method="_on_global_timer_timeout"]
